# cosmwasm-boilerplate

./: .gitignore  Cargo.toml  Makefile  README.md
src/: contract.rs  exec.rs  lib.rs  query.rs
src/test/mock/: contract_v2.rs  mod.rs
src/types/: mod.rs  msg.rs  query.rs  sudo.rs
