[package]
edition = "2021"
name = "power-flow-bridge"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
contract = ["library", "types"]
default = ["contract"]
# use library feature to disable all instantiate/execute/query exports
library = ["types", "cw-storage-plus", "cosmos-sdk-proto-titan", "titan-proto"]
# use types feature to build only types
types = []

[dependencies]
bech32 = "0.11.0"
cosmos-sdk-proto-titan = {git = "https://github.com/titantkx/titan-rust-proto.git", tag = "v3.4.3", package = "cosmos-sdk-proto-titan", optional = true}
cosmwasm-schema = "2.1.4"
cosmwasm-std = {version = "2.1.4", features = ["cosmwasm_1_4", "stargate"]}
cw-storage-plus = {version = "2.0.0", optional = true}
cw2 = "2.0.0"
prost = "0.12"
regex-lite = "0.1.6"
serde_json = "1.0.133"
thiserror = "2.0.3"
titan-proto = {git = "https://github.com/titantkx/titan-rust-proto.git", tag = "v3.4.3", package = "titan-proto", default-features = false, optional = true}

[dev-dependencies]
cw-multi-test = {version = "2.2.0", features = ["cosmwasm_1_4", "stargate"]}
lazy_static = "1.5.0"
